--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/bips555/mernproject/issues"
   },
-  "homepage": "https://github.com/bips555/mernproject#readme"
+  "homepage": "https://github.com/bips555/mernproject#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1"
+  }
 }
